fix: remove scrollbar to common/styles

--- a/src/app/common/components/input-file/input-file.component.scss
+++ b/src/app/common/components/input-file/input-file.component.scss
@@ -1,4 +1,6 @@
+@import 'variables';
+
 .label {
-  color: #ffffff;
+  color: $color-text;
   margin-left: 10px;
 }
