--- a/src/app/common/styles/panel.scss
+++ b/src/app/common/styles/panel.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import 'mixins';
+@import 'scrollbar';
 
 @mixin panel ($z-index: $z-index-above-map-1) {
   position: absolute;
@@ -32,6 +33,7 @@
   }
 
   .content {
+    @extend .scrollbar;
     @include flex-grow;
     padding: 12px 0 12px 24px;
   }
